@@ -1,6 +1,7 @@
 v0.7.3
 added : `--` separator, stating that all following arguments are file names. Suggested by Chip Turner.
 added : OpenBSD target, by Juan Francisco Cantero Hurtado
+fixed : dictBuilder using HC levels, reported by Bartosz Taudul
 
 v0.7.2
 fixed : ZSTD_decompressBlock() using multiple consecutive blocks. Reported by Greg Slazinski.
